# FEALParadise

./: CMakeLists.txt  README.md
include/: feal.h
src/: feal.cpp  main.cpp
tests/: test_feal.cpp
